; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_licence.c_licence_send_platform_challenge_response.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_licence.c_licence_send_platform_challenge_response.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SEC_LICENSE_PKT = common dso_local global i32 0, align 4
@LICENCE_TAG_PLATFORM_CHALLANGE_RESPONSE = common dso_local global i32 0, align 4
@g_rdp_version = common dso_local global i64 0, align 8
@RDP_V5 = common dso_local global i64 0, align 8
@LICENCE_TOKEN_SIZE = common dso_local global i32 0, align 4
@LICENCE_HWID_SIZE = common dso_local global i32 0, align 4
@LICENCE_SIGNATURE_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*)* @licence_send_platform_challenge_response to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @licence_send_platform_challenge_response(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %10 = load i32, i32* @SEC_LICENSE_PKT, align 4
  store i32 %10, i32* %7, align 4
  store i32 58, i32* %8, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* %8, align 4
  %13 = add nsw i32 %12, 2
  %14 = call i32 @sec_init(i32 %11, i32 %13)
  store i32 %14, i32* %9, align 4
  %15 = load i32, i32* %9, align 4
  %16 = load i32, i32* @LICENCE_TAG_PLATFORM_CHALLANGE_RESPONSE, align 4
  %17 = call i32 @out_uint8(i32 %15, i32 %16)
  %18 = load i32, i32* %9, align 4
  %19 = load i64, i64* @g_rdp_version, align 8
  %20 = load i64, i64* @RDP_V5, align 8
  %21 = icmp sge i64 %19, %20
  %22 = zext i1 %21 to i64
  %23 = select i1 %21, i32 3, i32 2
  %24 = call i32 @out_uint8(i32 %18, i32 %23)
  %25 = load i32, i32* %9, align 4
  %26 = load i32, i32* %8, align 4
  %27 = call i32 @out_uint16_le(i32 %25, i32 %26)
  %28 = load i32, i32* %9, align 4
  %29 = call i32 @out_uint16_le(i32 %28, i32 1)
  %30 = load i32, i32* %9, align 4
  %31 = load i32, i32* @LICENCE_TOKEN_SIZE, align 4
  %32 = call i32 @out_uint16_le(i32 %30, i32 %31)
  %33 = load i32, i32* %9, align 4
  %34 = load i32*, i32** %4, align 8
  %35 = load i32, i32* @LICENCE_TOKEN_SIZE, align 4
  %36 = call i32 @out_uint8p(i32 %33, i32* %34, i32 %35)
  %37 = load i32, i32* %9, align 4
  %38 = call i32 @out_uint16_le(i32 %37, i32 1)
  %39 = load i32, i32* %9, align 4
  %40 = load i32, i32* @LICENCE_HWID_SIZE, align 4
  %41 = call i32 @out_uint16_le(i32 %39, i32 %40)
  %42 = load i32, i32* %9, align 4
  %43 = load i32*, i32** %5, align 8
  %44 = load i32, i32* @LICENCE_HWID_SIZE, align 4
  %45 = call i32 @out_uint8p(i32 %42, i32* %43, i32 %44)
  %46 = load i32, i32* %9, align 4
  %47 = load i32*, i32** %6, align 8
  %48 = load i32, i32* @LICENCE_SIGNATURE_SIZE, align 4
  %49 = call i32 @out_uint8p(i32 %46, i32* %47, i32 %48)
  %50 = load i32, i32* %9, align 4
  %51 = call i32 @s_mark_end(i32 %50)
  %52 = load i32, i32* %9, align 4
  %53 = load i32, i32* %7, align 4
  %54 = call i32 @sec_send(i32 %52, i32 %53)
  ret void
}

declare dso_local i32 @sec_init(i32, i32) #1

declare dso_local i32 @out_uint8(i32, i32) #1

declare dso_local i32 @out_uint16_le(i32, i32) #1

declare dso_local i32 @out_uint8p(i32, i32*, i32) #1

declare dso_local i32 @s_mark_end(i32) #1

declare dso_local i32 @sec_send(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
